--- a/Themes/Styles/Base/Widgets/radioButton.xaml
+++ b/Themes/Styles/Base/Widgets/radioButton.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- Base -->
-    <Style x:Key="CheckBoxBase" TargetType="{x:Type CheckBox}">
+    <Style x:Key="RadioButtonBase" TargetType="{x:Type RadioButton}">
         <Setter Property="Height" Value="{StaticResource WgHeight}"/>
         <Setter Property="Cursor" Value="Hand"/>
         
@@ -15,14 +15,14 @@
     
     
     <!-- Plain -->
-    <Style x:Key="CheckBoxPlain" TargetType="CheckBox" BasedOn="{StaticResource CheckBoxBase}">
+    <Style x:Key="RadioButtonPlain" TargetType="RadioButton" BasedOn="{StaticResource RadioButtonBase}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}"/>
         <Setter Property="Background" Value="{StaticResource RgbM1}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
         
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="CheckBox">
+                <ControlTemplate TargetType="RadioButton">
                     <Border Background="{TemplateBinding Background}">
                         <BulletDecorator SnapsToDevicePixels="True">
                             <BulletDecorator.Bullet>
@@ -65,70 +65,70 @@
         </Setter>
     </Style>
     
-    <Style TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}"/>
+    <Style TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}"/>
     
-    <Style x:Key="CheckBoxPlainM1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+    <Style x:Key="RadioButtonPlainM1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}"/>
         <Setter Property="Background" Value="{StaticResource RgbM1}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
     </Style>
     
-    <Style x:Key="CheckBoxPlainM2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+    <Style x:Key="RadioButtonPlainM2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}"/>
         <Setter Property="Background" Value="{StaticResource RgbM2}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
     </Style>
     
-    <Style x:Key="CheckBoxPlainM3" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+    <Style x:Key="RadioButtonPlainM3" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}"/>
         <Setter Property="Background" Value="{StaticResource RgbM3}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
     </Style>
     
-    <Style x:Key="CheckBoxPlainB1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+    <Style x:Key="RadioButtonPlainB1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}"/>
         <Setter Property="Background" Value="{StaticResource RgbB1}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
     </Style>
     
-    <Style x:Key="CheckBoxPlainB2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlain}">
+    <Style x:Key="RadioButtonPlainB2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}"/>
         <Setter Property="Background" Value="{StaticResource RgbB2}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
     </Style>
     
     <!-- 3 States -->
-    <Style x:Key="CheckBox3SPlainM1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlainM1}">
+    <Style x:Key="RadioButton3SPlainM1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlainM1}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     
-    <Style x:Key="CheckBox3SPlainM2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlainM2}">
+    <Style x:Key="RadioButton3SPlainM2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlainM2}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     
-    <Style x:Key="CheckBox3SPlainM3" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlainM3}">
+    <Style x:Key="RadioButton3SPlainM3" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlainM3}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     
-    <Style x:Key="CheckBox3SPlainB1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlainB1}">
+    <Style x:Key="RadioButton3SPlainB1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlainB1}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     
-    <Style x:Key="CheckBox3SPlainB2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxPlainB2}">
+    <Style x:Key="RadioButton3SPlainB2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlainB2}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     <!-- /Plain -->
     
     
     <!-- Transparent -->
-    <Style x:Key="CheckBoxTransparent" TargetType="CheckBox" BasedOn="{StaticResource CheckBoxBase}">
+    <Style x:Key="RadioButtonTransparent" TargetType="RadioButton" BasedOn="{StaticResource RadioButtonBase}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}"/>
         <Setter Property="Background" Value="{StaticResource RgbM1}"/>
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=self}, Path=Background}"/>
         
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="CheckBox">
+                <ControlTemplate TargetType="RadioButton">
                     <Border Background="Transparent">
                         <BulletDecorator SnapsToDevicePixels="True">
                             <BulletDecorator.Bullet>
@@ -171,49 +171,49 @@
         </Setter>
     </Style>
     
-    <Style x:Key="CheckBoxTransparentM1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparent}">
+    <Style x:Key="RadioButtonTransparentM1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparent}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM1}"/>
         <Setter Property="Background" Value="{StaticResource RgbM1}"/>
     </Style>
     
-    <Style x:Key="CheckBoxTransparentM2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparent}">
+    <Style x:Key="RadioButtonTransparentM2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparent}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}"/>
         <Setter Property="Background" Value="{StaticResource RgbM2}"/>
     </Style>
     
-    <Style x:Key="CheckBoxTransparentM3" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparent}">
+    <Style x:Key="RadioButtonTransparentM3" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparent}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}"/>
         <Setter Property="Background" Value="{StaticResource RgbM3}"/>
     </Style>
     
-    <Style x:Key="CheckBoxTransparentB1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparent}">
+    <Style x:Key="RadioButtonTransparentB1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparent}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateB1}"/>
         <Setter Property="Background" Value="{StaticResource RgbB1}"/>
     </Style>
     
-    <Style x:Key="CheckBoxTransparentB2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparent}">
+    <Style x:Key="RadioButtonTransparentB2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparent}">
         <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateB2}"/>
         <Setter Property="Background" Value="{StaticResource RgbB2}"/>
     </Style>
     
     <!-- 3 States -->
-    <Style x:Key="CheckBox3STransparentM1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparentM1}">
+    <Style x:Key="RadioButton3STransparentM1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparentM1}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     
-    <Style x:Key="CheckBox3STransparentM2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparentM2}">
+    <Style x:Key="RadioButton3STransparentM2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparentM2}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     
-    <Style x:Key="CheckBox3STransparentM3" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparentM3}">
+    <Style x:Key="RadioButton3STransparentM3" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparentM3}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     
-    <Style x:Key="CheckBox3STransparentB1" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparentB1}">
+    <Style x:Key="RadioButton3STransparentB1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparentB1}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     
-    <Style x:Key="CheckBox3STransparentB2" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxTransparentB2}">
+    <Style x:Key="RadioButton3STransparentB2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonTransparentB2}">
         <Setter Property="IsThreeState" Value="True"></Setter>
     </Style>
     <!-- /Transparent -->
