--- a/Views/Demo/RadioButtonView.xaml
+++ b/Views/Demo/RadioButtonView.xaml
@@ -9,36 +9,36 @@
         <StackPanel>
             <!-- Plain -->
             <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
-                <CheckBox Style="{StaticResource CheckBoxPlainM1}" Width="150" Margin="5 0 5 5">PlainM1</CheckBox>
-                <CheckBox Style="{StaticResource CheckBoxPlainM2}" Width="150" Margin="5 0 5 5">PlainM2</CheckBox>
-                <CheckBox Style="{StaticResource CheckBoxPlainM3}" Width="150" Margin="5 0 5 5">PlainM3</CheckBox>
-                <CheckBox Style="{StaticResource CheckBoxPlainB1}" Width="150" Margin="5 0 5 5">PlainB1</CheckBox>
-                <CheckBox Style="{StaticResource CheckBoxPlainB2}" Width="150" Margin="5 0 5 5">PlainB2</CheckBox>
+                <RadioButton Style="{StaticResource RadioButtonPlainM1}" Width="150" Margin="5 0 5 5">PlainM1</RadioButton>
+                <RadioButton Style="{StaticResource RadioButtonPlainM2}" Width="150" Margin="5 0 5 5">PlainM2</RadioButton>
+                <RadioButton Style="{StaticResource RadioButtonPlainM3}" Width="150" Margin="5 0 5 5">PlainM3</RadioButton>
+                <RadioButton Style="{StaticResource RadioButtonPlainB1}" Width="150" Margin="5 0 5 5">PlainB1</RadioButton>
+                <RadioButton Style="{StaticResource RadioButtonPlainB2}" Width="150" Margin="5 0 5 5">PlainB2</RadioButton>
             </StackPanel>
             <!-- Plain 3 States -->
             <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
-                <CheckBox Style="{StaticResource CheckBox3SPlainM1}" Width="150" Margin="5 0 5 5">3SPlainM1</CheckBox>
-                <CheckBox Style="{StaticResource CheckBox3SPlainM2}" Width="150" Margin="5 0 5 5">3SPlainM2</CheckBox>
-                <CheckBox Style="{StaticResource CheckBox3SPlainM3}" Width="150" Margin="5 0 5 5">3SPlainM3</CheckBox>
-                <CheckBox Style="{StaticResource CheckBox3SPlainB1}" Width="150" Margin="5 0 5 5">3SPlainB1</CheckBox>
-                <CheckBox Style="{StaticResource CheckBox3SPlainB2}" Width="150" Margin="5 0 5 5">3SPlainB2</CheckBox>
+                <RadioButton Style="{StaticResource RadioButton3SPlainM1}" Width="150" Margin="5 0 5 5">3SPlainM1</RadioButton>
+                <RadioButton Style="{StaticResource RadioButton3SPlainM2}" Width="150" Margin="5 0 5 5">3SPlainM2</RadioButton>
+                <RadioButton Style="{StaticResource RadioButton3SPlainM3}" Width="150" Margin="5 0 5 5">3SPlainM3</RadioButton>
+                <RadioButton Style="{StaticResource RadioButton3SPlainB1}" Width="150" Margin="5 0 5 5">3SPlainB1</RadioButton>
+                <RadioButton Style="{StaticResource RadioButton3SPlainB2}" Width="150" Margin="5 0 5 5">3SPlainB2</RadioButton>
             </StackPanel>
             
             <!-- Transparent -->
             <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
-                <CheckBox Style="{StaticResource CheckBoxTransparentM1}" Width="150" Margin="5 0 5 5">TransparentM1</CheckBox>
-                <CheckBox Style="{StaticResource CheckBoxTransparentM2}" Width="150" Margin="5 0 5 5">TransparentM2</CheckBox>
-                <CheckBox Style="{StaticResource CheckBoxTransparentM3}" Width="150" Margin="5 0 5 5">TransparentM3</CheckBox>
-                <CheckBox Style="{StaticResource CheckBoxTransparentB1}" Width="150" Margin="5 0 5 5">TransparentB1</CheckBox>
-                <CheckBox Style="{StaticResource CheckBoxTransparentB2}" Width="150" Margin="5 0 5 5">TransparentB2</CheckBox>
+                <RadioButton Style="{StaticResource RadioButtonTransparentM1}" Width="150" Margin="5 0 5 5">TransparentM1</RadioButton>
+                <RadioButton Style="{StaticResource RadioButtonTransparentM2}" Width="150" Margin="5 0 5 5">TransparentM2</RadioButton>
+                <RadioButton Style="{StaticResource RadioButtonTransparentM3}" Width="150" Margin="5 0 5 5">TransparentM3</RadioButton>
+                <RadioButton Style="{StaticResource RadioButtonTransparentB1}" Width="150" Margin="5 0 5 5">TransparentB1</RadioButton>
+                <RadioButton Style="{StaticResource RadioButtonTransparentB2}" Width="150" Margin="5 0 5 5">TransparentB2</RadioButton>
             </StackPanel>
             <!-- Transparent 3 States -->
             <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
-                <CheckBox Style="{StaticResource CheckBox3STransparentM1}" Width="150" Margin="5 0 5 5">3STransparentM1</CheckBox>
-                <CheckBox Style="{StaticResource CheckBox3STransparentM2}" Width="150" Margin="5 0 5 5">3STransparentM2</CheckBox>
-                <CheckBox Style="{StaticResource CheckBox3STransparentM3}" Width="150" Margin="5 0 5 5">3STransparentM3</CheckBox>
-                <CheckBox Style="{StaticResource CheckBox3STransparentB1}" Width="150" Margin="5 0 5 5">3STransparentB1</CheckBox>
-                <CheckBox Style="{StaticResource CheckBox3STransparentB2}" Width="150" Margin="5 0 5 5">3STransparentB2</CheckBox>
+                <RadioButton Style="{StaticResource RadioButton3STransparentM1}" Width="150" Margin="5 0 5 5">3STransparentM1</RadioButton>
+                <RadioButton Style="{StaticResource RadioButton3STransparentM2}" Width="150" Margin="5 0 5 5">3STransparentM2</RadioButton>
+                <RadioButton Style="{StaticResource RadioButton3STransparentM3}" Width="150" Margin="5 0 5 5">3STransparentM3</RadioButton>
+                <RadioButton Style="{StaticResource RadioButton3STransparentB1}" Width="150" Margin="5 0 5 5">3STransparentB1</RadioButton>
+                <RadioButton Style="{StaticResource RadioButton3STransparentB2}" Width="150" Margin="5 0 5 5">3STransparentB2</RadioButton>
             </StackPanel>
         </StackPanel>
         
