--- a/Themes/Styles/Base.xaml
+++ b/Themes/Styles/Base.xaml
@@ -15,6 +15,7 @@
         <ResourceDictionary Source="/Themes/Styles/Base/Widgets/button.xaml"/>
         <ResourceDictionary Source="/Themes/Styles/Base/Widgets/checkBox.xaml"/>
         <ResourceDictionary Source="/Themes/Styles/Base/Widgets/radioButton.xaml"/>
+        <ResourceDictionary Source="/Themes/Styles/Base/Widgets/toggleButton.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
