config togleButton base

--- a/Themes/Styles/Base/Widgets/toggleButton.xaml
+++ b/Themes/Styles/Base/Widgets/toggleButton.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- Base -->
-    <Style x:Key="RadioButtonBase" TargetType="{x:Type RadioButton}">
+    <Style x:Key="ToggleButtonBase" TargetType="{x:Type ToggleButton}">
         <Setter Property="Height" Value="{StaticResource WgHeight}"/>
         <Setter Property="Cursor" Value="Hand"/>
         
@@ -15,72 +15,32 @@
     
     
     <!-- Plain -->
-    <Style x:Key="RadioButtonPlain" TargetType="RadioButton" BasedOn="{StaticResource RadioButtonBase}">
-        <Setter Property="Background" Value="{StaticResource RgbM1}"/>
-        <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
-        
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="RadioButton">
-                    <Border Background="{TemplateBinding Background}">
-                        <BulletDecorator SnapsToDevicePixels="True">
-                            <BulletDecorator.Bullet>
-                                <Border x:Name="Border" 
-                                        BorderBrush="{TemplateBinding Foreground}"
-                                        Background="{StaticResource RgbOk}"
-                                        BorderThickness="1"
-                                        Width="16" 
-                                        Height="16" 
-                                        Margin="4 3 0 0"
-                                        CornerRadius="8">
-                                    <Image x:Name="CheckMark" Style="{StaticResource ImgCheckM3}"/>
-                                </Border>
-                            </BulletDecorator.Bullet>
-                            <ContentPresenter HorizontalAlignment="Left"
-                                              VerticalAlignment="Center"
-                                              Margin="8 0 0 0"
-                                              RecognizesAccessKey="True"
-                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                        </BulletDecorator>
-                    </Border>
-                    
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="False">
-                            <Setter TargetName="CheckMark" Property="Visibility" Value="Collapsed"/>
-                            <Setter TargetName="Border" Property="Background" Value="Transparent"/>
-                        </Trigger>
-                        
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter TargetName="CheckMark" Property="Visibility" Value="Collapsed"/>
-                            <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource RgbOk}"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-    
-    <Style x:Key="RadioButtonPlainM1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
+    <Style x:Key="ToggleButtonPlain" TargetType="ToggleButton" BasedOn="{StaticResource ToggleButtonBase}">
         <Setter Property="Background" Value="{StaticResource RgbM1}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
     </Style>
     
-    <Style x:Key="RadioButtonPlainM2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
+    <Style x:Key="ToggleButtonPlainM1" TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource ToggleButtonPlain}">
+        <Setter Property="Background" Value="{StaticResource RgbM1}"/>
+        <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
+    </Style>
+    
+    <Style x:Key="ToggleButtonPlainM2" TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource ToggleButtonPlain}">
         <Setter Property="Background" Value="{StaticResource RgbM2}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
     </Style>
     
-    <Style x:Key="RadioButtonPlainM3" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
+    <Style x:Key="ToggleButtonPlainM3" TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource ToggleButtonPlain}">
         <Setter Property="Background" Value="{StaticResource RgbM3}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
     </Style>
     
-    <Style x:Key="RadioButtonPlainB1" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
+    <Style x:Key="ToggleButtonPlainB1" TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource ToggleButtonPlain}">
         <Setter Property="Background" Value="{StaticResource RgbB1}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
     </Style>
     
-    <Style x:Key="RadioButtonPlainB2" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}">
+    <Style x:Key="ToggleButtonPlainB2" TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource ToggleButtonPlain}">
         <Setter Property="Background" Value="{StaticResource RgbB2}"/>
         <Setter Property="Foreground" Value="{StaticResource RgbM3}"/>
     </Style>
@@ -88,7 +48,7 @@
     
     
     <!-- INITIAL -->
-    <Style TargetType="{x:Type RadioButton}" BasedOn="{StaticResource RadioButtonPlain}"/>
+    <Style TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource ToggleButtonPlain}"/>
     <!-- /INITIAL -->
     
     
