--- a/Views/Demo/ToggleButtonView.xaml
+++ b/Views/Demo/ToggleButtonView.xaml
@@ -9,7 +9,7 @@
         <StackPanel>
             <!-- Plain -->
             <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
-                <RadioButton Style="{StaticResource RadioButtonPlainM1}" Width="150" Margin="5 0 5 5">PlainM1</RadioButton>
+                <ToggleButton Style="{StaticResource ToggleButtonPlainM1}" Width="150" Margin="5 0 5 5">PlainM1</ToggleButton>
             </StackPanel>
         </StackPanel>
         
