add combobox style

--- a/Themes/Styles/Base.xaml
+++ b/Themes/Styles/Base.xaml
@@ -16,6 +16,8 @@
         <ResourceDictionary Source="/Themes/Styles/Base/Widgets/checkBox.xaml"/>
         <ResourceDictionary Source="/Themes/Styles/Base/Widgets/radioButton.xaml"/>
         <ResourceDictionary Source="/Themes/Styles/Base/Widgets/toggleButton.xaml"/>
+        
+        <ResourceDictionary Source="/Themes/Styles/Base/Widgets/comboBox.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
