--- a/Themes/Styles/Base/Widgets/comboBox.xaml
+++ b/Themes/Styles/Base/Widgets/comboBox.xaml
@@ -78,7 +78,7 @@
                                           Content="{TemplateBinding ComboBox.SelectionBoxItem}"
                                           ContentTemplate="{TemplateBinding ComboBox.SelectionBoxItemTemplate}"
                                           ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}" />
-                        <TextBox Name="PART_EditableTextBox" Margin="3, 3, 23, 3"
+                        <TextBox Name="PART_EditableTextBox" Margin="5, 3, 25, 3"
                                  IsReadOnly="{TemplateBinding IsReadOnly}"
                                  Visibility="Hidden" Background="Transparent"
                                  HorizontalAlignment="Left" VerticalAlignment="Center"
@@ -97,9 +97,9 @@
                             <Grid Name="DropDown" SnapsToDevicePixels="True"
                                   MinWidth="{TemplateBinding FrameworkElement.ActualWidth}"
                                   MaxHeight="{TemplateBinding ComboBox.MaxDropDownHeight}">
-                                <Border Name="DropDownBorder" Background="White" Margin="0, 1, 0, 0"
-                                        CornerRadius="0" BorderThickness="1,1,1,1"
-                                        BorderBrush="{StaticResource ComboBoxNormalBorderBrush}" />
+                                <Border Name="DropDownBorder" Background="{StaticResource RgbM1}" Margin="0, 2, 0, 0"
+                                        BorderThickness="1,1,1,1"
+                                        BorderBrush="{StaticResource RgbM2}" />
                                 <ScrollViewer Margin="4" SnapsToDevicePixels="True">
                                     <ItemsPresenter KeyboardNavigation.DirectionalNavigation="Contained" />
                                 </ScrollViewer>
