--- a/Themes/Styles/Base/Widgets/comboBox.xaml
+++ b/Themes/Styles/Base/Widgets/comboBox.xaml
@@ -61,9 +61,21 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
     
+    <Style x:Key="MaterialDesignComboBoxItemStyle" TargetType="{x:Type ComboBoxItem}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="Padding" Value="16 8" />
+        <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+        <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+        <Setter Property="Background" Value="{StaticResource RgbM1}" />
+        <Setter Property="BorderBrush" Value="{StaticResource RgbM1}" />
+        <Setter Property="Foreground" Value="{StaticResource RgbM2}" />
+        <Setter Property="BorderThickness" Value="2 0 0 0" />
+    </Style>
+    
     <Style x:Key="ComboBoxPlain" TargetType="ComboBox" BasedOn="{StaticResource ComboBoxBase}">
         <Setter Property="Background" Value="{StaticResource RgbM1}" />
         <Setter Property="Foreground" Value="{StaticResource RgbM2}" />
+        <Setter Property="ItemContainerStyle" Value="{StaticResource MaterialDesignComboBoxItemStyle}" />
 
         <Setter Property="Template">
             <Setter.Value>
