--- a/Themes/Styles/Base/Widgets/comboBox.xaml
+++ b/Themes/Styles/Base/Widgets/comboBox.xaml
@@ -14,17 +14,12 @@
             </Style>
         </Style.Resources>
     </Style>
-
-    <SolidColorBrush x:Key="ComboBoxNormalBorderBrush" Color="#e3e9ef" />
-    <SolidColorBrush x:Key="ComboBoxNormalBackgroundBrush" Color="#fff" />
-    <SolidColorBrush x:Key="ComboBoxDisabledForegroundBrush" Color="#888" />
-    <SolidColorBrush x:Key="ComboBoxDisabledBackgroundBrush" Color="#eee" />
-    <SolidColorBrush x:Key="ComboBoxDisabledBorderBrush" Color="#888" />
     <!-- /Base -->
 
 
     <!-- Plain -->
-    <ControlTemplate TargetType="ToggleButton" x:Key="ComboBoxPlainM1Template">
+    <!-- M1 -->
+    <ControlTemplate TargetType="ToggleButton" x:Key="ComboBoxPlainM1ControlTemplate">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -61,7 +56,7 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
     
-    <Style x:Key="MaterialDesignComboBoxItemStyle" TargetType="{x:Type ComboBoxItem}">
+    <Style x:Key="ComboBoxItemPlainM1Template" TargetType="{x:Type ComboBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="Padding" Value="16 8" />
         <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
@@ -72,10 +67,10 @@
         <Setter Property="BorderThickness" Value="2 0 0 0" />
     </Style>
     
-    <Style x:Key="ComboBoxPlain" TargetType="ComboBox" BasedOn="{StaticResource ComboBoxBase}">
+    <Style x:Key="ComboBoxPlainM1Template" TargetType="ComboBox" BasedOn="{StaticResource ComboBoxBase}">
         <Setter Property="Background" Value="{StaticResource RgbM1}" />
         <Setter Property="Foreground" Value="{StaticResource RgbM2}" />
-        <Setter Property="ItemContainerStyle" Value="{StaticResource MaterialDesignComboBoxItemStyle}" />
+        <Setter Property="ItemContainerStyle" Value="{StaticResource ComboBoxItemPlainM1Template}" />
 
         <Setter Property="Template">
             <Setter.Value>
@@ -84,7 +79,7 @@
                         <ToggleButton Name="ToggleButton"
                                       ClickMode="Press" Focusable="False"
                                       IsChecked="{Binding Path=IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-                                      Template="{StaticResource ComboBoxPlainM1Template}"/>
+                                      Template="{StaticResource ComboBoxPlainM1ControlTemplate}"/>
                         <ContentPresenter Name="ContentSite" Margin="5, 3, 25, 3" IsHitTestVisible="False"
                                           HorizontalAlignment="Left" VerticalAlignment="Center"
                                           Content="{TemplateBinding ComboBox.SelectionBoxItem}"
@@ -122,8 +117,119 @@
                         <Trigger Property="ItemsControl.HasItems" Value="False">
                             <Setter Property="FrameworkElement.MinHeight" TargetName="DropDownBorder" Value="95" />
                         </Trigger>
-                        <Trigger Property="UIElement.IsEnabled" Value="False">
-                            <Setter Property="TextElement.Foreground" Value="{StaticResource ComboBoxDisabledForegroundBrush}" />
+                        <Trigger Property="ItemsControl.IsGrouping" Value="True">
+                            <Setter Property="ScrollViewer.CanContentScroll" Value="False" />
+                        </Trigger>
+                        <Trigger Property="ComboBox.IsEditable" Value="True">
+                            <Setter Property="KeyboardNavigation.IsTabStop" Value="False" />
+                            <Setter Property="UIElement.Visibility" TargetName="PART_EditableTextBox" Value="Visible" />
+                            <Setter Property="UIElement.Visibility" TargetName="ContentSite" Value="Hidden" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <!-- /M1 -->
+    
+    <!-- M2 -->
+    <ControlTemplate TargetType="ToggleButton" x:Key="ComboBoxPlainM2ControlTemplate">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="25" />
+            </Grid.ColumnDefinitions>
+            <Border Grid.ColumnSpan="2" Name="Border"
+                    BorderBrush="{StaticResource RgbM3}"
+                    BorderThickness="0, 0, 0, 2"
+                    Background="{StaticResource RgbM2}" />
+            <Border Grid.Column="1" Margin="1, 1, 1, 1" BorderBrush="Transparent" Name="ButtonBorder"
+                    CornerRadius="0, 0, 0, 0" 
+                    BorderThickness="0, 0, 0, 0"
+                    Background="Transparent" />
+
+            <Path Name="Arrow" Grid.Column="1"
+                  Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z"
+                  HorizontalAlignment="Center" 
+                  Fill="{StaticResource RgbM3}"
+                  VerticalAlignment="Center" />
+        </Grid>
+
+        <ControlTemplate.Triggers>
+            <Trigger Property="UIElement.IsMouseOver" Value="True">
+                <Setter Property="Fill" TargetName="Arrow" Value="{StaticResource RgbB1}"/>
+            </Trigger>
+            <Trigger Property="ToggleButton.IsChecked" Value="True">
+                <Setter Property="Fill" TargetName="Arrow" Value="{StaticResource RgbB1}"/>
+            </Trigger>
+            <Trigger Property="UIElement.IsEnabled" Value="False">
+                <Setter Property="Panel.Background" TargetName="Border" Value="{StaticResource RgbM2}" />
+                <Setter Property="TextElement.Foreground" Value="{StaticResource RgbM3}" />
+                <Setter Property="Fill" TargetName="Arrow" Value="{StaticResource RgbB1}"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    
+    <Style x:Key="ComboBoxItemPlainM2Template" TargetType="{x:Type ComboBoxItem}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="Padding" Value="16 8" />
+        <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+        <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+        <Setter Property="Background" Value="{StaticResource RgbM2}" />
+        <Setter Property="BorderBrush" Value="{StaticResource RgbM2}" />
+        <Setter Property="Foreground" Value="{StaticResource RgbM3}" />
+        <Setter Property="BorderThickness" Value="2 0 0 0" />
+    </Style>
+    
+    <Style x:Key="ComboBoxPlainM2Template" TargetType="ComboBox" BasedOn="{StaticResource ComboBoxBase}">
+        <Setter Property="Background" Value="{StaticResource RgbM2}" />
+        <Setter Property="Foreground" Value="{StaticResource RgbM3}" />
+        <Setter Property="ItemContainerStyle" Value="{StaticResource ComboBoxItemPlainM2Template}" />
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ComboBox">
+                    <Grid>
+                        <ToggleButton Name="ToggleButton"
+                                      ClickMode="Press" Focusable="False"
+                                      IsChecked="{Binding Path=IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+                                      Template="{StaticResource ComboBoxPlainM2ControlTemplate}"/>
+                        <ContentPresenter Name="ContentSite" Margin="5, 3, 25, 3" IsHitTestVisible="False"
+                                          HorizontalAlignment="Left" VerticalAlignment="Center"
+                                          Content="{TemplateBinding ComboBox.SelectionBoxItem}"
+                                          ContentTemplate="{TemplateBinding ComboBox.SelectionBoxItemTemplate}"
+                                          ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}" />
+                        <TextBox Name="PART_EditableTextBox" Margin="5, 3, 25, 3"
+                                 IsReadOnly="{TemplateBinding IsReadOnly}"
+                                 Visibility="Hidden" Background="Transparent"
+                                 HorizontalAlignment="Left" VerticalAlignment="Center"
+                                 Focusable="True">
+                            <TextBox.Template>
+                                <ControlTemplate TargetType="TextBox">
+                                    <Border Name="PART_ContentHost" Focusable="False" />
+                                </ControlTemplate>
+                            </TextBox.Template>
+                        </TextBox>
+
+                        <Popup Name="Popup" Placement="Bottom"
+                               Focusable="False" AllowsTransparency="True"
+                               IsOpen="{TemplateBinding ComboBox.IsDropDownOpen}"
+                               PopupAnimation="Slide">
+                            <Grid Name="DropDown" SnapsToDevicePixels="True"
+                                  MinWidth="{TemplateBinding FrameworkElement.ActualWidth}"
+                                  MaxHeight="{TemplateBinding ComboBox.MaxDropDownHeight}">
+                                <Border Name="DropDownBorder" Background="{StaticResource RgbM2}" Margin="0, 2, 0, 0"
+                                        BorderThickness="1,1,1,1"
+                                        BorderBrush="{StaticResource RgbM3}" />
+                                <ScrollViewer Margin="4" SnapsToDevicePixels="True">
+                                    <ItemsPresenter KeyboardNavigation.DirectionalNavigation="Contained" />
+                                </ScrollViewer>
+                            </Grid>
+                        </Popup>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="ItemsControl.HasItems" Value="False">
+                            <Setter Property="FrameworkElement.MinHeight" TargetName="DropDownBorder" Value="95" />
                         </Trigger>
                         <Trigger Property="ItemsControl.IsGrouping" Value="True">
                             <Setter Property="ScrollViewer.CanContentScroll" Value="False" />
@@ -138,33 +244,29 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <!-- /M2 -->
 
-    <Style x:Key="ComboBoxPlainM1" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlain}">
-        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}" />
+    <Style x:Key="ComboBoxPlainM1" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlainM1Template}">
         <Setter Property="Background" Value="{StaticResource RgbM1}" />
         <Setter Property="Foreground" Value="{StaticResource RgbM2}" />
     </Style>
 
-    <Style x:Key="ComboBoxPlainM2" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlain}">
-        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}" />
+    <Style x:Key="ComboBoxPlainM2" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlainM2Template}">
         <Setter Property="Background" Value="{StaticResource RgbM2}" />
         <Setter Property="Foreground" Value="{StaticResource RgbM3}" />
     </Style>
 
-    <Style x:Key="ComboBoxPlainM3" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlain}">
-        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM2}" />
+    <Style x:Key="ComboBoxPlainM3" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlainM1Template}">
         <Setter Property="Background" Value="{StaticResource RgbM3}" />
         <Setter Property="Foreground" Value="{StaticResource RgbM2}" />
     </Style>
 
-    <Style x:Key="ComboBoxPlainB1" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlain}">
-        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}" />
+    <Style x:Key="ComboBoxPlainB1" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlainM1Template}">
         <Setter Property="Background" Value="{StaticResource RgbB1}" />
         <Setter Property="Foreground" Value="{StaticResource RgbM3}" />
     </Style>
 
-    <Style x:Key="ComboBoxPlainB2" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlain}">
-        <Setter Property="Tag" Value="{StaticResource ImgCheckIndeterminateM3}" />
+    <Style x:Key="ComboBoxPlainB2" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlainM1Template}">
         <Setter Property="Background" Value="{StaticResource RgbB2}" />
         <Setter Property="Foreground" Value="{StaticResource RgbM3}" />
     </Style>
@@ -172,7 +274,7 @@
 
 
     <!-- INITIAL -->
-    <Style TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlain}" />
+    <Style TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxPlainM1Template}" />
     <!-- /INITIAL -->
 
 
